--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
                         const fileName = `${subject} (${semester}_${season}${year.toString().slice(-2)}).pdf`;
                         const fullUrl = `${baseUrl}${folderPart}${fileName}`;
                         totalLinks++;
+
                         downloadPromises.push(
                             openAndDownload(fullUrl).then((downloaded) => {
-                                if (downloaded) downloadedLinks++;
+                                if (downloaded) {
+                                    downloadedLinks++;
+                                }
                             })
                         );
                     }
@@ -79,7 +82,7 @@
             if (downloadedLinks === 0) {
                 document.getElementById('status').innerHTML = `<p class='text-yellow-400'>⚠️ No valid PDFs found after checking ${totalLinks} links.</p>`;
             } else {
-                document.getElementById('status').innerHTML = `<p class='text-green-400'>✅ Download complete. ${downloadedLinks} file(s) downloaded successfully.</p>`;
+                document.getElementById('status').innerHTML = `<p class='text-green-400'>✅ Download complete. ${downloadedLinks} file(s) downloaded successfully out of ${totalLinks} checked.</p>`;
             }
         }
     </script>
