--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body class="bg-gray-900 text-white min-h-screen flex items-center justify-center p-5">
     <div class="bg-gray-800 rounded-2xl shadow-2xl p-10 w-full max-w-md text-center space-y-6 animate-fade-in">
+        <!-- Add logo above the heading -->
+        <img src="bitlogo.png" alt="BITM Logo" width="250" height="250" class="mx-auto mb-4">
+        
         <h1 class="text-3xl font-semibold tracking-wide">BITM-PYQs Downloader</h1>
+        
         <select id="subjectSelect" class="w-full p-3 bg-gray-700 rounded-lg text-lg focus:outline-none focus:ring-2 focus:ring-green-500">
             <option value="MA107 MATHEMATICS-II">MA107 MATHEMATICS-II</option>
             <option value="PH113 PHYSICS">PH113 PHYSICS</option>
