--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
 
     <script>
         async function openAndDownload(url) {
-            return new Promise((resolve) => {
-                const iframe = document.createElement('iframe');
-                iframe.style.display = 'none';
-                iframe.src = url;
-                iframe.onload = () => {
-                    resolve(true);
-                };
-                iframe.onerror = () => {
-                    resolve(false);
-                };
-                document.body.appendChild(iframe);
-                setTimeout(() => {
-                    document.body.removeChild(iframe);
-                    resolve(false);
-                }, 5000);
-            });
+            try {
+                const response = await fetch(url, { method: 'HEAD' });
+                if (response.ok) {
+                    const link = document.createElement('a');
+                    link.href = url;
+                    link.download = url.split('/').pop();
+                    document.body.appendChild(link);
+                    link.click();
+                    document.body.removeChild(link);
+                    return true;
+                } else {
+                    return false;
+                }
+            } catch (error) {
+                return false;
+            }
         }
 
         async function downloadPapers() {
@@ -58,10 +58,7 @@
 
             document.getElementById('status').innerHTML = "<p class='animate-pulse'>🔄 Checking for available PDFs...</p>";
 
-            let totalLinks = 0;
-            let downloadedLinks = 0;
-
-            const downloadPromises = [];
+            let downloadPromises = [];
 
             for (let year of years) {
                 for (let season of seasons) {
@@ -69,20 +66,15 @@
                     for (let semester of semesters) {
                         const fileName = `${subject} (${semester}_${season}${year.toString().slice(-2)}).pdf`;
                         const fullUrl = `${baseUrl}${folderPart}${fileName}`;
-                        totalLinks++;
-                        downloadPromises.push(
-                            openAndDownload(fullUrl).then((downloaded) => {
-                                if (downloaded) downloadedLinks++;
-                            })
-                        );
+                        downloadPromises.push(openAndDownload(fullUrl));
                     }
                 }
             }
 
-            await Promise.all(downloadPromises);
+            const results = await Promise.all(downloadPromises);
+            const downloadedLinks = results.filter(success => success).length;
 
-            // Just display the "Download complete." message
-            document.getElementById('status').innerHTML = "<p class='text-green-400'>✅ Download complete.</p>";
+            document.getElementById('status').innerHTML = `<p class='text-green-400'>✅ Download complete.</p>`;
         }
     </script>
 
